--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -16,15 +16,18 @@
 
   <div class="wrapper">
     <header class="main-header">
+      
+      <!-- sign up/log in button-->
+       <div class="login-signup-container">
+          <a href="login.html">Log in</a>
+           <button><a href="register.html">Sign up</a></button>
+       </div>
+
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">Eco Travel Planner</h1>
 
-      <!-- sign up/log in button-->
-      <div class="login-signup-container">
-        <a href="login.html">Log in</a>
-        <button><a href="register.html"></a>Sign up</button>
-      </div>
     </header>
+
     <!--Navigation bar-->
     <nav class="dashboard-nav-bar">
       <a href="index.html">Home</a> |
@@ -40,8 +43,7 @@
       <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
       <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
       <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
-      <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
-          class="icon">Logout</a>
+      <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout" class="icon">Logout</a>
     </div>
 
     <main class="content">
