--- a/profileManagement.html
+++ b/profileManagement.html
@@ -21,6 +21,11 @@
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">Eco Travel Planner</h1>
 
+      <!-- sign up/log in button-->
+            <div class="login-signup-container">
+                <a href="login.html">Log in</a>
+                <button><a href="register.html">Sign up</a></button>
+            </div>
     </header>
 
     <!--Top Navigation bar-->
@@ -68,7 +73,7 @@
 
           <!-- SECTION ACCOUNT INFO-->
           <section id="userAccount" class="content-section"> <!--account info style for account detail pg-->
-            <h2>Account Information</h2>
+            <h2 style="text-align: left;">Account Information</h2>
             <div class="user-details">
               <div class="photo-section">
                 <div class="avatar large" id="avatarPreview"></div>
@@ -186,7 +191,7 @@
 
           <!-- SECTION HELP CENTER-->
           <section id="help" class="content-section" style="display: none;">
-            <h2>Help Center</h2>
+            <h2 style="text-align: left;">Help Center</h2>
             <div class="field">
               <label for="concern" style="text-align: center;">Tell us your concern !</label>
               <div class="input-button-group">
@@ -280,7 +285,7 @@
 
           <!-- SECTION ABOUT US-->
           <section id="aboutUs" class="content-section" style="display: none;">
-            <h2>About Us</h2>
+            <h2 style="text-align: left;">About Us</h2>
 
             <div class="about-us-container">
               <h2>Our Story</h2>
@@ -424,7 +429,7 @@
 
           <!-- SECTION DELETE ACC-->
           <section id="delete" class="content-section" style="display: none;">
-            <h2>Delete Account</h2>
+            <h2 style="text-align: left;">Delete Account</h2>
             <p class="warning-text">
               Deleting your account is permanent and cannot be undone. This will remove all your data, saved travel
               plans, preferences, and profile information.
