--- a/travelPlanner.html
+++ b/travelPlanner.html
@@ -19,11 +19,11 @@
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">EcoTrip Planner</h1>
 
-      <!-- sign up/log in button-->
-        <div class="login-signup-container">
-          <a href="login.html">Log in</a>
-          <button><a href="register.html"></a>Sign up</button>
-        </div>
+     <!-- sign up/log in button-->
+            <div class="login-signup-container">
+                <a href="login.html">Log in</a>
+                <button><a href="register.html">Sign up</a></button>
+            </div>
     </header>
 
     <!--Navigation bar-->
