--- a/weatherModule.html
+++ b/weatherModule.html
@@ -31,10 +31,10 @@
             <h1 class="app-title">Eco Travel Planner</h1>
 
         <!-- sign up/log in button-->
-        <div class="login-signup-container">
-          <a href="login.html">Log in</a>
-          <button>Sign up</button>
-        </div>
+            <div class="login-signup-container">
+                <a href="login.html">Log in</a>
+                <button><a href="register.html">Sign up</a></button>
+            </div>
         </header>
 
         <!--Navigation bar-->
