--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -13,15 +13,14 @@
 </head>
 
 <body>
-
   <div class="wrapper">
     <header class="main-header">
-      
+
       <!-- sign up/log in button-->
-       <div class="login-signup-container">
-          <a href="login.html">Log in</a>
-           <button><a href="register.html">Sign up</a></button>
-       </div>
+      <div class="login-signup-container">
+        <a href="login.html">Log in</a>
+        <button><a href="register.html">Sign up</a></button>
+      </div>
 
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">Eco Travel Planner</h1>
@@ -43,7 +42,8 @@
       <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
       <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
       <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
-      <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout" class="icon">Logout</a>
+      <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
+          class="icon">Logout</a>
     </div>
 
     <main class="content">
@@ -127,12 +127,9 @@
     </main>
 
 
-
-  </div>
-
-  <footer>
-    <p>Copywritted by Group 8 OCC 3 Web Programming</p>
-  </footer>
+    <footer>
+      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+    </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
@@ -150,6 +147,7 @@
       document.getElementById("mainsidebar").classList.toggle("open");
     }
   </script>
+  </div>
 </body>
 
 
