--- a/weatherModule.html
+++ b/weatherModule.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<!-- Main Side Bar -->
+    <!-- Main Side Bar -->
     <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
     <div class="mainsidebar" id="mainsidebar">
         <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
@@ -22,7 +22,8 @@
             Planner</a>
         <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
         <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
-        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"class="icon">Logout</a>
+        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
+                class="icon">Logout</a>
     </div>
 
     <div class="wrapper">
@@ -30,7 +31,7 @@
             <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
             <h1 class="app-title">Eco Travel Planner</h1>
 
-        <!-- sign up/log in button-->
+            <!-- sign up/log in button-->
             <div class="login-signup-container">
                 <a href="login.html">Log in</a>
                 <button><a href="register.html">Sign up</a></button>
@@ -118,8 +119,12 @@
             }
         </script>
 
-    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
-    <script src="js/weather.js"></script>
+        <script defer
+            src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
+            integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
+            data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}'
+            crossorigin="anonymous"></script>
+        <script src="js/weather.js"></script>
 </body>
 
 <!--Footer for copywrite-->
