--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="assets/images/sya.jpg" class="card-img-top" alt="...">
+                                <img src="assets/images/weather.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Weather Checker</h5>
