Change some sysntax error

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="feature-card">
                         <img src="assets/images/feature5.jpg" alt="Feature 5">
-                        <h3>?Collaborate with friends in real time</h3>
+                        <h3>Collaborate with friends in real time</h3>
                         <p>Plan along with your friends with live syncing and collaborative editing.</p>
                     </div>
                     <div class="feature-card">
