--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="assets/images/dina.jpg" class="card-img-top" alt="...">
+                                <img src="assets/images/profile_management.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Manage Profile</h5>
