--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     </div>
                     <div class="feature-card">
                         <img src="assets/images/feature5.jpg" alt="Feature 5">
-                        <h3>Collaborate with friends in real time</h3>
-                        <p>Plan along with your friends with live syncing and collaborative editing.</p>
+                        <h3>Facilitates green itinerary planning</h3>
+                        <p>Create travel plans along with your friends based on eco-friendly recommandation.</p>
                     </div>
                     <div class="feature-card">
                         <img src="assets/images/feature6.jpg" alt="Feature 6">
@@ -135,7 +135,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="assets/images/profile_management.jpeg" class="card-img-top" alt="...">
+                                <img src="assets/images/profile_management.jpg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Manage Profile</h5>
@@ -201,7 +201,7 @@
                 <div class="homeCarboncontent">
                     <h2>What is Carbon Footprint?</h2>
                     <p>A carbon footprint is the total greenhouse gas emissions caused directly and indirectly by an individual, organization, event, or product.</p>
-                    <button><a href="carbonFootprint.html">Count Now</a></button>
+                    <button><a style="text-decoration: none color(srgb rgb(46, 62, 206) green blue);" href="carbonFootprint.html">Count Now</a></button>
                 </div>
                 </div>
             </div>
