--- a/profileManagement.html
+++ b/profileManagement.html
@@ -193,11 +193,10 @@
           <section id="help" class="content-section" style="display: none;">
             <h2 style="text-align: left;">Help Center</h2>
             <div class="field">
-              <label for="concern" style="text-align: center;">Tell us your concern !</label>
+              <h4 style="text-align: center;">Tell us your concern !</h4>
               <div class="input-button-group">
                 <div class="input-box">
-                  <input type="text" id="concern" value="Write here..." disabled />
-                  <span class="edit-icon">✏️</span>
+                  <input type="text" id="concern" placeholder="Write here..."  />
                 </div>
                 <button class="edit-btn">Enter</button>
               </div>
