Changed the title, font family and remove login button at pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <button><a href="register.html">Sign up</a></button>
             </div>
 
-            <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
-            <h1 class="app-title">Eco Travel Planner</h1>
+            <h1 class="app-title">TerraGo</h1>
 
         </header>
 
