--- a/weatherModule.html
+++ b/weatherModule.html
@@ -28,14 +28,7 @@
 
     <div class="wrapper">
         <header class="main-header">
-            <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
-            <h1 class="app-title">Eco Travel Planner</h1>
-
-            <!-- sign up/log in button-->
-            <div class="login-signup-container">
-                <a href="login.html">Log in</a>
-                <button><a href="register.html">Sign up</a></button>
-            </div>
+            <h1 class="app-title">TerraGo</h1>
         </header>
 
         <!--Navigation bar-->
