--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -17,13 +17,8 @@
     <header class="main-header">
 
       <!-- sign up/log in button-->
-      <div class="login-signup-container">
-        <a href="login.html">Log in</a>
-        <button><a href="register.html">Sign up</a></button>
-      </div>
 
-      <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
-      <h1 class="app-title">Eco Travel Planner</h1>
+      <h1 class="app-title">TerraGo</h1>
 
     </header>
 
