--- a/login.html
+++ b/login.html
@@ -10,8 +10,7 @@
 
     <!--Header for each page-->
     <header class="main-header">
-        <img src="../assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
-        <h1 class="app-title">Eco Travel Planner</h1>
+        <h1 class="app-title">TerraGo</h1>
       </header>
       
       <!--Main content-->
