Fixed the size of the weather box size

--- a/weatherModule.html
+++ b/weatherModule.html
@@ -44,7 +44,10 @@
                 <!--current weather forecast-->
                 <div class="current-weather">
                     <div class="details">
-                        <h2>_______ ( ______ )</h2>
+                        <div class="location-text">
+                            <h2 class="city-name">_______</h2>
+                            <p class="date">______</p>
+                        </div>
                         <h6>Temperature : __°C</h6>
                         <h6>Wind : __ M/S</h6>
                         <h6>Humidity : __%</h6>
