changed the copyright

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <!-- App Benefits-->
-            <h2 style="text-align: center;"><strong>Why Eco Travel Planner is better?</strong></h2>
+            <h2 style="text-align: center;"><strong>Why Choose TerraGo ?</strong></h2>
 
             <div class="container">
                 <div class="feature-section">
@@ -213,7 +213,7 @@
 
         <!--Footer for copywrite-->
         <footer>
-            <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+            <p>&copy; Group 8 – OCC 3 Web Programming</p>
         </footer>
     </div>
     
