--- a/travelPlanner.html
+++ b/travelPlanner.html
@@ -288,7 +288,7 @@
 </body>
 
 <footer>
-  <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+  <p>&copy; Group 8 – OCC 3 Web Programming</p>
 </footer>
 
 </html>
