--- a/weatherModule.html
+++ b/weatherModule.html
@@ -132,7 +132,7 @@
 
 <!--Footer for copywrite-->
 <footer>
-    <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+    <p>&copy; Group 8 – OCC 3 Web Programming</p>
 </footer>
 
 </html>
