--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -123,7 +123,7 @@
 
 
     <footer>
-      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+      <p>&copy; Group 8 – OCC 3 Web Programming</p>
     </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
