--- a/profileManagement.html
+++ b/profileManagement.html
@@ -281,21 +281,20 @@
 
             <div class="about-us-container">
               <h2>Our Story</h2>
-              <p>Eco Travel Planner was born from a simple idea: travel should enrich our lives without depleting our
+              <p>TerraGo was born from a simple idea: travel should enrich our lives without depleting our
                 planet. Founded in 2025
                 by a group of environmentally conscious students, we set out to create a platform that makes sustainable
                 travel accessible to everyone.</p>
 
               <p>We believe that exploring the world and protecting it can go hand in hand. By connecting travelers with
                 eco-friendly accommodations, transportation options, and activities, we're helping to reduce the
-                environmental
-                impact of tourism while supporting local communities.
+                environmental impact of tourism while supporting local communities.
               </p>
             </div>
 
             <div class="text-center">
               <h2 class="title">Our Values</h2>
-              <p class="subtitle">The principles that guide everything we do at Eco Travel Planner.</p>
+              <p class="subtitle">The principles that guide everything we do at TerraGo.</p>
             </div>
 
             <div class="values-grid">
@@ -328,7 +327,7 @@
               <div class="team-container">
                 <div class="team-header">
                   <h2 class="team-title">Meet Our Team</h2>
-                  <p class="team-subtitle">The passionate individuals behind Eco travel Planner.</p>
+                  <p class="team-subtitle">The passionate individuals behind TerraGo.</p>
                 </div>
 
                 <div class="team-grid">
