--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
 
     <!--Footer for copywrite-->
     <footer>
-        <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+        <p>&copy; Group 8 – OCC 3 Web Programming</p>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
