--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                 <!-- Content Section -->
                 <div class="content-overlay">
                 <div class="homeCarboncontent">
-                    <h2>What is Carbon Footprint?</h2>
-                    <p>A carbon footprint is the total greenhouse gas emissions caused directly and indirectly by an individual, organization, event, or product.</p>
-                    <button><a style="text-decoration: none color(srgb rgb(46, 62, 206) green blue);" href="carbonFootprint.html">Count Now</a></button>
+                    <h2 style="color:#ffffff">What is Carbon Footprint?</h2>
+                    <p style="color: #ffffff;">A carbon footprint is the total greenhouse gas emissions caused directly and indirectly by an individual, organization, event, or product.</p>
+                    <button><a style="text-decoration: none; color: #ffffff;" href="carbonFootprint.html">Count Now</a></button>
                 </div>
                 </div>
             </div>
