--- a/profileManagement.html
+++ b/profileManagement.html
@@ -186,7 +186,7 @@
           <section id="help" class="content-section" style="display: none;">
             <h2 style="text-align: left;">Help Center</h2>
             <div class="field">
-              <h4 style="text-align: center;">Tell us your concern !</h4>
+              <p style="text-align: center; font-size: 20px;">Tell us your concern !</p>
               <div class="input-button-group">
                 <div class="input-box">
                   <input type="text" id="concern" placeholder="Write here..."  />
@@ -212,7 +212,7 @@
                 <button class="edit-btn">+</button>
               </div>
               <div class="faq-answer">
-                <p>Green accommodations are selected based on certifications, sustainable practices...</p>
+                <p>Green accommodations are selected based on certifications, sustainable practices and carbon footprint!</p>
               </div>
             </div>
 
@@ -222,7 +222,7 @@
                 <button class="edit-btn">+</button>
               </div>
               <div class="faq-answer">
-                <p>To recover your account, please follow these steps: 1. Go to the login page...</p>
+                <p>There is no way to recover your account as we will delete all of your trace.</p>
               </div>
             </div>
 
