change button colour

--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -103,7 +103,7 @@
 
             <!-- Calculate Button -->
             <div class="text-center my-4">
-              <button type="submit" class="btn btn-success btn-lg">Calculate Footprint</button>
+              <button type="submit" class="btn btn-carbon-footprint btn-lg">Calculate Footprint</button>
             </div>
 
           </form>
