--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -46,7 +46,8 @@
         <!-- Title and Intro -->
         <div class="text">
           <h2>Carbon Footprint Calculator</h2>
-          <p class="lead">Analyze and estimate the carbon footprint of your travel.</p>
+          <p class="lead">Analyze and estimate the carbon footprint of your travel 
+            to better understand how your transportation choices impact the environment and discover ways to reduce your emissions.</p>
 
 
           <!-- Carbon Form -->
