--- a/weatherModule.html
+++ b/weatherModule.html
@@ -46,7 +46,7 @@
                     <div class="details">
                         <div class="location-text">
                             <h2 class="city-name">_______</h2>
-                            <p class="date">______</p>
+                            <h2 class="date">______</h2>
                         </div>
                         <h6>Temperature : __°C</h6>
                         <h6>Wind : __ M/S</h6>
@@ -57,7 +57,7 @@
                 <div class="days-forecast">
 
                     <!--5 days weather forecast-->
-                    <h2>5-Day Forecast</h2>
+                    <h4>5-Day Forecast</h4>
 
                     <ul class="weather-cards">
 
