--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
                                 <img src="assets/images/profile_management.jpg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Manage Profile</h5>
-                                    <p class="card-text">Edit and update your profile here if needed.</p>
-                                    <a href="profileManagement.html" class="btn btn-primary">Manage Your Profile</a>
+                                    <h5 style="text-align: center;">Manage Profile</h5>
+                                    <p style="text-align: center;padding: 0px 10px 31px 10px;">Edit and update your profile here if needed.</p>
+                                    <div class="col text-center">
+                                        <a href="profileManagement.html" class="btn btn-primary">Manage Your Profile</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -150,9 +152,11 @@
                                 <img src="assets/images/travel_img.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Travel Planner</h5>
-                                    <p class="card-text">Plan you travel wisely and save the earth in the process!</p>
-                                    <a href="travelPlanner.html" class="btn btn-primary">Plan Your Travel</a>
+                                    <h5 style="text-align: center;">Travel Planner</h5>
+                                    <p style="text-align: center;padding: 0px 10px 10px 10px;">Plan you travel wisely and save the earth in the process!</p>
+                                    <div class="col text-center">
+                                        <a href="travelPlanner.html" class="btn btn-primary" style="text-align: center;">Plan Your Travel</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -163,9 +167,11 @@
                                 <img src="assets/images/weather.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Weather Checker</h5>
-                                    <p class="card-text">Should you bring your umbrella with you today?</p>
-                                    <a href="weatherModule.html" class="btn btn-primary">Check the Weather</a>
+                                    <h5 style="text-align: center;">Weather Checker</h5>
+                                    <p style="text-align: center;padding: 0px 10px 10px 10px;">Should you bring your umbrella with you today?</p>
+                                    <div class="col text-center">
+                                        <a href="weatherModule.html" class="btn btn-primary">Check the Weather</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -176,17 +182,17 @@
                                 <img src="assets/images/carbonfootprint.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
-                                    <h5 class="card-title">Calculator</h5>
-                                    <p class="card-text">Curious about how much carbon footprint your trip is?</p>
-                                    <a href="carbonFootprint.html" class="btn btn-primary">Calculate Carbon
-                                        Footprint</a>
+                                    <h5 style="text-align: center;">Calculator</h5>
+                                    <p style="text-align: center;padding: 0px 10px 10px 10px;">Curious about how much carbon footprint your trip is?</p>
+                                    <div class="col text-center">
+                                        <a href="carbonFootprint.html" class="btn btn-primary">Calculate Carbon Footprint</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         <!-- Module Calculator-->
          <!-- Hero Image Section -->
         <div class="section-divider"> </div>
