--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                                 <div class="card-body">
                                     <h5 style="text-align: center;">Manage Profile</h5>
                                     <p style="text-align: center;padding: 0px 10px 31px 10px;">Edit and update your profile here if needed.</p>
-                                    <div class="col text-center">
-                                        <a href="profileManagement.html" class="btn btn-primary">Manage Your Profile</a>
+                                    <div class="col text-center" style="margin-bottom: 20px;">
+                                        <a href="profileManagement.html" class="button" >Manage Your Profile</a>
                                     </div>
                                 </div>
                             </div>
@@ -154,8 +154,8 @@
                                 <div class="card-body">
                                     <h5 style="text-align: center;">Travel Planner</h5>
                                     <p style="text-align: center;padding: 0px 10px 10px 10px;">Plan you travel wisely and save the earth in the process!</p>
-                                    <div class="col text-center">
-                                        <a href="travelPlanner.html" class="btn btn-primary" style="text-align: center;">Plan Your Travel</a>
+                                    <div class="col text-center" style="margin-bottom: 20px;">
+                                        <a href="travelPlanner.html" class="button">Plan Your Travel</a>
                                     </div>
                                 </div>
                             </div>
@@ -169,8 +169,8 @@
                                 <div class="card-body">
                                     <h5 style="text-align: center;">Weather Checker</h5>
                                     <p style="text-align: center;padding: 0px 10px 10px 10px;">Should you bring your umbrella with you today?</p>
-                                    <div class="col text-center">
-                                        <a href="weatherModule.html" class="btn btn-primary">Check the Weather</a>
+                                    <div class="col text-center" style="margin-bottom: 20px;">
+                                        <a href="weatherModule.html" class="button">Check the Weather</a>
                                     </div>
                                 </div>
                             </div>
@@ -184,8 +184,8 @@
                                 <div class="card-body">
                                     <h5 style="text-align: center;">Calculator</h5>
                                     <p style="text-align: center;padding: 0px 10px 10px 10px;">Curious about how much carbon footprint your trip is?</p>
-                                    <div class="col text-center">
-                                        <a href="carbonFootprint.html" class="btn btn-primary">Calculate Carbon Footprint</a>
+                                    <div class="col text-center" style="margin-bottom: 20px;">
+                                        <a href="carbonFootprint.html" class="button">Calculate Carbon Footprint</a>
                                     </div>
                                 </div>
                             </div>
