--- a/profileManagement.html
+++ b/profileManagement.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/aboutus.css">
   <link rel="stylesheet" href="css/travel.css">
+  <link rel="stylesheet" href="css/profile.css">
 </head>
 </head>
 
@@ -70,14 +71,14 @@
             <div class="user-details">
               <div class="photo-section">
                 <div class="avatar large" id="avatarPreview"></div>
-                <label for="photoUpload" class="add-photo">Add Photo</label>
+                <label for="photoUpload" class="add-photo">Change Photo</label>
                 <input type="file" id="photoUpload" accept="image/*" style="display: none;" />
               </div>
               <div class="field">
-                <label for="username">Preferred Username</label>
+                <label for="username" style="padding-left: 7px;">Username</label>
                 <div class="input-box">
                   <input type="text" id="username" value="yourname" disabled />
-                  <span class="edit-icon">✏️</span>
+                  <span class="edit-icon"><img src="icons/pencilEditIcon.png" alt="Edit" class="icon"></span>
                 </div>
               </div>
             </div>
@@ -95,6 +96,21 @@
                   <p><strong>Password</strong><br>yourpassword</p>
                 </div>
                 <button class="edit-btn">Change Password</button>
+              </div>
+               <div id="passwordModal" class="modal">
+                <div class="modal-content">
+                  <span class="close-btn" id="closeModal">&times;</span>
+                  <h2>Change Password</h2>
+                  <form>
+                    <label>Current Password</label>
+                    <input type="password" required><br>
+                    <label>New Password</label>
+                    <input type="password" required><br>
+                    <label>Confirm New Password</label>
+                    <input type="password" required><br>
+                    <button type="submit">Update Password</button>
+                  </form>
+                </div>
               </div>
 
               <div class="info-row">
@@ -490,6 +506,26 @@
         });
       });
     });
+
+        //to change password
+    const modal = document.getElementById("passwordModal");
+    const btn = document.querySelector(".edit-btn");
+    const span = document.getElementById("closeModal");
+
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
 
     function confirmDelete() {
       if (confirm("Are you sure you want to permanently delete your account?")) {
