--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
     <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
+     <link rel="stylesheet" href="css/profile.css">
 
 </head>
 
@@ -28,18 +29,16 @@
         </header>
 
 
-        <!-- Main Side Bar -->
+       <!-- Main Side Bar -->
         <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
         <div class="mainsidebar" id="mainsidebar">
-            <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
-            <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
-            <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel
-                Planner</a>
-            <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
-            <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon">
-                Calculator</a>
-            <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
-                    class="icon">Logout</a>
+        <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
+        <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
+        <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
+        <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
+        <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
+            class="icon">Logout</a>
         </div>
 
         <main class="content">
