--- a/weatherModule.html
+++ b/weatherModule.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
     <link rel="stylesheet" href="css/weather.css">
     <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
+     <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
