--- a/profileManagement.html
+++ b/profileManagement.html
@@ -50,7 +50,7 @@
             <p>yourname</p>
           </div>
           <nav class="menu">
-            <a href="#" onclick="showSection('userAccount')"><img src="icons/accountIcon.png" alt="Your Account"
+            <a href="#" onclick="showSection('userAccount')"><img src="icons/account2Icon.png" alt="Your Account"
                 class="icon"> Your Account</a>
             <a href="#" onclick="showSection('favourite')"><img src="icons/loveIcon.png" alt="Favourite" class="icon">
               Favourite</a>
