connect db to user review

--- a/profileManagement.html
+++ b/profileManagement.html
@@ -207,7 +207,7 @@
                 <div class="input-box">
                   <input type="text" id="concern" placeholder="Write here..." />
                 </div>
-                <button class="edit-btn">Enter</button>
+                <button class="edit-btn" id="submitReviewBtn">Enter</button>
               </div>
             </div>
 
@@ -466,83 +466,7 @@
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
-
-  <script>
-    // for preview image for profile pic
-    document.getElementById('photoUpload').addEventListener('change', function (event) {
-      const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          document.getElementById('avatarPreview').style.backgroundImage = `url(${e.target.result})`;
-          document.getElementById('avatarPreview').style.backgroundSize = 'cover';
-          document.getElementById('avatarPreview').style.backgroundPosition = 'center';
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    function showSection(id) {
-      // Hide all sections
-      document.querySelectorAll('.content-section').forEach(sec => {
-        sec.style.display = 'none';
-      });
-      // Show the selected one
-      document.getElementById(id).style.display = 'block';
-    }
-
-    function toggleSidebar() {
-      document.getElementById("mainsidebar").classList.toggle("open");
-    }
-
-    document.addEventListener('DOMContentLoaded', function () {
-      const faqItems = document.querySelectorAll('.faq-item');
-
-      faqItems.forEach(item => {
-        const question = item.querySelector('.faq-question');
-        const toggleButton = item.querySelector('.toggle-button');
-
-        question.addEventListener('click', () => {
-          item.classList.toggle('open');
-        });
-      });
-    });
-
-    //to change password
-    const modal = document.getElementById("passwordModal");
-    const btn = document.getElementById("changePasswordBtn");
-    const span = document.getElementById("closeModal");
-
-    btn.onclick = function () {
-      modal.style.display = "block";
-    }
-
-    span.onclick = function () {
-      modal.style.display = "none";
-    }
-
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-
-
-    function confirmDelete() {
-      if (confirm("Are you sure you want to permanently delete your account?")) {
-        // Here, you would send a request to your backend to delete the account.
-        alert("Account deleted. (Simulated)");
-        // Redirect or clear session, etc.
-      }
-    }
-    //for log out top bar
-    function confirmLogout() {
-      return confirm("Are you sure you want to logout?")
-    }
-
-  </script>
-
-
+  <script src="js/profile.js"></script>
 </body>
 
 <!--Footer for copywrite-->
